--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,29 @@
---- #YAML:1.0
-name:                autobox
-version:             2.23
-abstract:            call methods on builtin types
-license:             ~
-author:              
-    - chocolateboy <chocolate.boy@email.com>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Scalar::Util:                  1.19
-    Scope::Guard:                  0.03
-    Storable:                      0
-    Test::More:                    0
-    XSLoader:                      0
+---
+abstract: 'PL_check hacks using Perl callbacks'
+author:
+  - 'Chia-liang Kao <clkao@clkao.org>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  B::Utils: 0
+  ExtUtils::Depends: 0
+  ExtUtils::MakeMaker: 6.42
+distribution_type: module
+generated_by: 'Module::Install version 0.91'
+license: perl
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: B-OPCheck
+no_index:
+  directory:
+    - inc
+    - t
+requires:
+  B::Utils: 0
+  Scope::Guard: 0
+  XSLoader: 0
+  perl: 5.8.0
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.28
